# python-project-template

./: .gitignore  LICENSE  README.md  pyproject.toml
